--- a/test_overload.ipynb
+++ b/test_overload.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/KANGHANNARA/AI_16_CP1_DS/blob/main/test_overload.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,37 +12,43 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# YOLOv5 를 통한 과적차량과 정상차량 object detection"
-      ],
       "metadata": {
         "id": "SXXUTLdn0fJk"
-      }
+      },
+      "source": [
+        "# YOLOv5 를 통한 과적차량과 정상차량 object detection"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "CPkA3i_x0uGR"
+      },
       "source": [
         "과적화물차량과 정상화물차량을 분류하는 주피터 노트북\n",
         "\n",
         "실행전에 runtime을 GPU로 바꿔서 실행하는 것을 추천드립니다.\n",
         "\n",
         "런타임 > 런타임 유형 변경 > GPU > 저장"
-      ],
-      "metadata": {
-        "id": "CPkA3i_x0uGR"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "ctrl+F9 를 눌러 모두 실행하거나 번호 밑의 재생버튼을 눌러서 한 단계 씩 실행 할 수 있습니다."
-      ],
       "metadata": {
         "id": "Tn3D1y6J42_1"
-      }
+      },
+      "source": [
+        "ctrl+F9 를 눌러 모두 실행하거나 번호 밑의 재생버튼을 눌러서 한 단계 씩 실행 할 수 있습니다."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "cellView": "form",
+        "id": "IWGQfUAJ1M-n"
+      },
+      "outputs": [],
       "source": [
         "%%capture\n",
         "#@title 1.object detection 모델 colab 환경설정\n",
@@ -70,16 +59,16 @@
         "%cd AI_16_CP1_DS\n",
         "!git clone https://github.com/ultralytics/yolov5.git\n",
         "!pip install -r ./AI_16_CP1_DS/requirements.txt"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "IWGQfUAJ1M-n"
-      },
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "hkFPb6wu6NJ3"
+      },
+      "outputs": [],
       "source": [
         "#@title 2. 영상 업로드\n",
         "#@markdown - 테스트 영상를 업로드 하는과정입니다.\n",
@@ -95,16 +84,16 @@
         "\n",
         "%cd input\n",
         "uploaded = files.upload()"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "hkFPb6wu6NJ3"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "9Ow2JWhw6NGR"
+      },
+      "outputs": [],
       "source": [
         "#@title 3.영상 테스트\n",
         "#@markdown 업로드한 영상속 화물차량이 불법차량인지 정상차량인지 판단하는 과정입니다.\n",
@@ -124,7 +113,7 @@
         "\n",
         "# 검증 명령어 실행\n",
         "for file in mp4_files:\n",
-        "    !python detect.py --source '{file}' --weights ../model/best.pt\n",
+        "    !python detect.py --source '{file}' --weights ../models/best.pt\n",
         "\n",
         "# exp 폴더 경로\n",
         "exp_dir = './runs/detect'\n",
@@ -147,16 +136,16 @@
         "                src = os.path.join(current_exp_dir, file)\n",
         "                dst = os.path.join(output_dir, file)\n",
         "                shutil.move(src, dst)"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "9Ow2JWhw6NGR"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "Q-jHhEBeCJo-"
+      },
+      "outputs": [],
       "source": [
         "#@title 3.1 재시작\n",
         "#@markdown - 3.1 시작버튼을 누릅니다.\n",
@@ -165,13 +154,24 @@
         "#@markdown - 3.1 재시작 버튼은 재시작 할 때 한 번만 눌러야합니다\n",
         "\n",
         "%cd ../"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "Q-jHhEBeCJo-"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
