--- a/test_overload.ipynb
+++ b/test_overload.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/KANGHANNARA/AI_16_CP1_DS/blob/main/test_overload.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -52,7 +52,7 @@
       "source": [
         "%%capture\n",
         "#@title 1.object detection 모델 colab 환경설정\n",
-        "#@markdown - git clone을 이용해서 모델과 requirements.txt 불러와서 로드하는 과정입니다.\\\n",
+        "#@markdown - git clone을 이용해서 모델과 requirements.txt 불러와서 로드하는 과정입니다.\n",
         "#@markdown - 1번을 두번실행할 경우 중복설치됩니다. 꼭 한번만 눌러주세요.\n",
         "\n",
         "!git clone https://github.com/KANGHANNARA/AI_16_CP1_DS.git\n",
@@ -65,14 +65,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "hkFPb6wu6NJ3"
       },
       "outputs": [],
       "source": [
         "#@title 2. 영상 업로드\n",
         "#@markdown - 테스트 영상를 업로드 하는과정입니다.\n",
-        "#@markdown - 테스트파일이 없다면 video_samples폴더에서 랜덤으로 다운로드하여 사용해도 상관없습니다.\n",
+        "#@markdown - 테스트파일이 없다면 video_samples폴더에서 랜덤으로 다운로드하여 사용합니다.\n",
         "\n",
         "import os\n",
         "from google.colab import files\n",
@@ -97,7 +96,7 @@
       "source": [
         "#@title 3.영상 테스트\n",
         "#@markdown 업로드한 영상속 화물차량이 불법차량인지 정상차량인지 판단하는 과정입니다.\n",
-        "#@markdown - 검증이 완료된 영상은 AI_16_CP1_DS -> output에서 확인가능합니다.\n",
+        "#@markdown - 테스트가 완료된 영상은 AI_16_CP1_DS -> output에서 확인가능합니다.\n",
         "#@markdown - 다른 영상을 추가로 검증하고자 할때는 3.1로 내려갑니다.\n",
         "\n",
         "import os\n",
@@ -152,6 +151,7 @@
         "#@markdown - input 폴더에 검증했던 영상을 삭제합니다.\n",
         "#@markdown - 2번 부터 다시 시작합니다\n",
         "#@markdown - 3.1 재시작 버튼은 재시작 할 때 한 번만 눌러야합니다\n",
+        "#@markdown - 모두 실행(ctrl+F9)하였을 때는 누르지 않고 2번으로 다시시작합니다.\n",
         "\n",
         "%cd ../"
       ]
@@ -160,8 +160,8 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "gpuClass": "standard",
     "kernelspec": {
