Colaboratory를 통해 생성됨

--- a/test_overload.ipynb
+++ b/test_overload.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/KANGHANNARA/AI_16_CP1_DS/blob/main/test_overload.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/KANGHANNARA/AI_16_CP1_DS_overload_detection/blob/main/test_overload.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,9 +43,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "IWGQfUAJ1M-n"
       },
       "outputs": [],
@@ -55,10 +54,10 @@
         "#@markdown - git clone을 이용해서 모델과 requirements.txt 불러와서 로드하는 과정입니다.\n",
         "#@markdown - 1번을 두번실행할 경우 중복설치됩니다. 꼭 한번만 눌러주세요.\n",
         "\n",
-        "!git clone https://github.com/KANGHANNARA/AI_16_CP1_DS.git\n",
+        "!git clone https://github.com/KANGHANNARA/AI_16_CP1_DS_overload_detection.git\n",
         "%cd AI_16_CP1_DS\n",
         "!git clone https://github.com/ultralytics/yolov5.git\n",
-        "!pip install -r ./AI_16_CP1_DS/requirements.txt"
+        "!pip install -r ./AI_16_CP1_DS_overload_detection/requirements.txt"
       ]
     },
     {
@@ -77,7 +76,7 @@
         "from google.colab import files\n",
         "\n",
         "# 경로 설정\n",
-        "input_dir = '/content/AI_16_CP1_DS/input'\n",
+        "input_dir = '/content/AI_16_CP1_DS_overload_detection/input'\n",
         "if not os.path.exists(input_dir):\n",
         "    os.makedirs(input_dir)\n",
         "\n",
@@ -89,14 +88,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "9Ow2JWhw6NGR"
       },
       "outputs": [],
       "source": [
         "#@title 3.영상 테스트\n",
         "#@markdown 업로드한 영상속 화물차량이 불법차량인지 정상차량인지 판단하는 과정입니다.\n",
-        "#@markdown - 테스트가 완료된 영상은 AI_16_CP1_DS -> output에서 확인가능합니다.\n",
+        "#@markdown - 테스트가 완료된 영상은 AI_16_CP1_DS_overload_detection -> output에서 확인가능합니다.\n",
         "#@markdown - 다른 영상을 추가로 검증하고자 할때는 3.1로 내려갑니다.\n",
         "\n",
         "import os\n",
@@ -141,7 +139,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "Q-jHhEBeCJo-"
       },
       "outputs": [],
